Add routes and morgan.js middleware

--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "author": "shownola",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "morgan": "^1.9.1"
   }
 }
