--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "express": "^4.17.1",
     "mongoose": "^5.6.10",
     "morgan": "^1.9.1",
-    "slugify": "^1.3.4"
+    "slugify": "^1.3.4",
+    "validator": "^11.1.0"
   }
 }
