Install jsonwebtoken and implement signup process

--- a/config.env
+++ b/config.env
@@ -6,3 +6,6 @@ DATABASE_USERNAME=natours-user
 PASSWORD=natours2019
 
 DATABASE_LOCAL=mongodb://localhost:27017/natours-app
+
+JWT_SECRET=this-is-my-extremely-long-secret-password
+JWT_EXPIRATION=90d
