--- a/config.env
+++ b/config.env
@@ -9,3 +9,8 @@ DATABASE_LOCAL=mongodb://localhost:27017/natours-app
 
 JWT_SECRET=this-is-my-extremely-long-secret-password
 JWT_EXPIRATION=90d
+
+EMAIL_USERNAME=7c5f96a7a060a9
+EMAIL_PASSWORD=1984f5c0c75def
+EMAIL_HOST=smtp.mailtrap.io
+EMAIL_PORT=2525
